--- a/templates/mainMap/humanMapSearching.html
+++ b/templates/mainMap/humanMapSearching.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>약국 찾기</title>
-    <link rel="stylesheet" href="/static/css/humanMapSearching.css">
+    <link rel="stylesheet" href="{static css/humanMapSearching.css}">
     <script src="https://kit.fontawesome.com/32afc995e9.js" crossorigin="anonymous"></script>
+    <script src="{static js/mapHuman.js}"></script>
 </head>
 
 <body>
@@ -140,7 +141,7 @@
             <button class="findBtn3">재고찾기</button>
         </div>
 
-        <div class="mapBox"></div>
+        <div class="map" id="map"></div>
     </div>
 </body>
 
