--- a/templates/mainMap/animalMapSearching.html
+++ b/templates/mainMap/animalMapSearching.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>약국 찾기</title>
-    <link rel="stylesheet" href="/static/css/animalMapSearching.css">
+    <link rel="stylesheet" href="{%static css/animalMapSearching.css%}">
     <script src="https://kit.fontawesome.com/32afc995e9.js" crossorigin="anonymous"></script>
+    <script src="{%static js/mapAnimal.js%}"></script>
 </head>
 <body>
     <div class="animalSearch">
@@ -135,7 +136,7 @@
             <button class="findBtn3">재고찾기</button>
         </div>
 
-        <div class="mapBox"></div>
+        <div class="map" id="map"></div>
     </div>
 
 </body>
